--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,6 +18,7 @@
       "modernForeign": "Urdu / Bangla Language",
       "pages": "Pages",
       "news": "News & Updates",
+      "blogs": "Blogs",
       "announcements": "Announcements",
       "ourSyllabus": "Our Syllabus",
       "academicCalendar": "Academic Calendar",
